force-app/main/default/objects/TableauViewerSettings__c/TableauViewerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Custom LWC Component Tableau Viewer</description>
    <label>Tableau Viewer Settings</label>
</CustomObject>