force-app/main/default/objects/TableauViewerSettings__c/fields/TableauClientId__c.field-meta.xml
<CustomField>
    <fullName>TableauClientId__c</fullName>
    <description>Tableau Server Connected App Client ID</description>
    <label>Tableau Client ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>