force-app/main/default/objects/TableauViewerSettings__c/fields/TableauClientSecret__c.field-meta.xml
<CustomField>
    <fullName>TableauClientSecret__c</fullName>
    <description>Tableau Server Connected App Client Secret</description>
    <label>Tableau Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>