force-app/main/default/objects/TableauViewerSettings__c/fields/TableauClientSecretId__c.field-meta.xml
<CustomField>
    <fullName>TableauClientSecretId__c</fullName>
    <description>Tableau Server Connected App Client Secret ID</description>
    <label>Tableau Client Secret ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>