force-app/main/default/objects/TableauViewerSettings__c/fields/TableauUserNameField__c.field-meta.xml
<CustomField>
    <fullName>TableauUserNameField__c</fullName>
    <description>Salesforce User Object Field Name which represents Tableau user name for the current user</description>
    <label>Tableau User Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>